[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/scoreboard/score_board_entry.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/kenvector_future.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/scoreboard/score_board.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.101961, 0.305882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0117647, 0.117647, 0.372549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.341176, 0.0156863, 0.0156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.0392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="score_board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 16.0
margin_top = 117.0
margin_right = 584.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 561.0
margin_bottom = 359.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 554.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Score"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 554.0
margin_bottom = 352.0

[node name="Panel" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 275.0
margin_bottom = 330.0
custom_styles/panel = SubResource( 1 )

[node name="team_blue_container" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 2.0
margin_right = 273.0
margin_bottom = 328.0

[node name="score_board_entry" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel/team_blue_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 271.0
margin_bottom = 62.0

[node name="score_board_entry2" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel/team_blue_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 271.0
margin_bottom = 128.0

[node name="score_board_entry3" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel/team_blue_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 271.0
margin_bottom = 194.0

[node name="score_board_entry4" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel/team_blue_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 198.0
margin_right = 271.0
margin_bottom = 260.0

[node name="score_board_entry5" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel/team_blue_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 264.0
margin_right = 271.0
margin_bottom = 326.0

[node name="Panel2" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 554.0
margin_bottom = 330.0
custom_styles/panel = SubResource( 2 )

[node name="team_red_container" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 2.0
margin_right = 273.0
margin_bottom = 328.0
size_flags_vertical = 0

[node name="score_board_entry3" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2/team_red_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 271.0
margin_bottom = 62.0

[node name="score_board_entry4" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2/team_red_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 271.0
margin_bottom = 128.0

[node name="score_board_entry5" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2/team_red_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 271.0
margin_bottom = 194.0

[node name="score_board_entry6" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2/team_red_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 198.0
margin_right = 271.0
margin_bottom = 260.0

[node name="score_board_entry" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Panel2/team_red_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 264.0
margin_right = 271.0
margin_bottom = 326.0

[node name="update_timer" type="Timer" parent="."]
autostart = true

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 18.0

[node name="result_label" type="Label" parent="CenterContainer2"]
unique_name_in_owner = true
visible = false
margin_left = 201.0
margin_top = -14.0
margin_right = 399.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
text = "DEFEAT"

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -47.0
margin_right = 3.0
margin_bottom = -47.0

[node name="restart_button" type="Button" parent="CenterContainer3"]
unique_name_in_owner = true
visible = false
margin_left = 199.0
margin_top = -21.0
margin_right = 400.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "Restart"

[connection signal="timeout" from="update_timer" to="." method="_on_update_timer_timeout"]
[connection signal="pressed" from="CenterContainer3/restart_button" to="." method="_on_restart_button_pressed"]
